<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.angiecasillas.formulario.Activity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirmar Datos"
        android:id="@+id/tvTitulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textSize="28dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/nombre"
    android:id="@+id/tvNombre"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:textAlignment="center"
    android:textSize="20dp"
    android:textColor="@color/colorPrimary"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:id="@+id/tvTelefono"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_boton_editar_datos"
        android:id="@+id/botonEditar"
        android:layout_below="@+id/buttonEdit"
        android:layout_centerHorizontal="true"
        android:theme="@style/buttonRaised"
        />

</RelativeLayout>
